--- a/static/sign_in.html
+++ b/static/sign_in.html
@@ -1,5 +1,5 @@
 <h1>Login</h1>
-<form method="post" action="/cauth/login">
+<form method="post" action="/login">
     <label for="name">User name</label>
     <input type="text" id="name" name="name">
     
