--- a/static/login.html
+++ b/static/login.html
@@ -1,10 +1,57 @@
-<h1>Login</h1>
-<form method="post" action="/cauth/login">
-    <label for="name">User name</label>
-    <input type="text" id="name" name="name">
+<!doctype html>
+<html ng-app="ndslabs-login">
+  <head>
+    <title>Workbench SSO Example</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.11/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.11/angular-route.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.11/angular-cookies.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.11/angular-resource.js"></script>
+
+    <script>
+      // Build up API base URL
+      // XXX: Remember to change these in /server.js when they change
+      const apiProtocol = 'https:'
+      const apiHost = 'www.mldev.ndslabs.org';
+      const apiPort = '';
+      const apiPath = '';
+      let apiBase = apiProtocol + '//' + apiHost;
+      if (apiPort) { apiBase += ':' + apiPort }
+      if (apiPath) { apiBase += apiPath }
+
+      // Now declare our login module
+      angular
+        .module("ndslabs-login", ['ngRoute'])
+        .controller("LoginController", ['$scope', '$http', '$window', function($scope, $http, $window) {
+          $scope.username = '';
+          $scope.password = '';
+          $scope.submit = function() {
+            console.log("Submitting...");
+            $http.post(apiBase + '/cauth/login', { username: $scope.username, password: $scope.password })
+              .then(function(response) {
+                console.log("OK: ", response);
+                console.log("Now redirecting...");
+                // TODO: Read rd querystring param
+                window.location.replace("/");
+              }, function(err) {
+               console.log("ERROR: ", err);
+              });
+          };
+        }]);
+    </script>
+  </head>
+  <body ng-controller="LoginController">
+    <h1>Workbench SSO Example</h1>
+    <ng-form name="wbLogin">
+      <label for="name">User name</label>
+      <input type="text" id="name" name="name" ng-model="username" />
     
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password">
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" ng-model="password" />
     
-    <button type="submit">Login</button>
-</form>
+      <button type="submit" ng-click="submit()">Login</button>
+    </ng-form>
+  </body>
+</html>
+
+
+
