--- a/static/login.html
+++ b/static/login.html
@@ -31,6 +31,7 @@
                 console.log("OK: ", response);
                 console.log("Now redirecting...");
                 // TODO: Read rd querystring param
+                // TODO: Use $window instead
                 window.location.replace("/");
               }, function(err) {
                console.log("ERROR: ", err);
